Override toString() method in every Pawn class and add ability to print entire chess board to the command line in the Board class